--- a/src/category.html
+++ b/src/category.html
@@ -17,6 +17,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -46,7 +50,7 @@
 			</div>
 		</section><!--we-do-->
 
-		<section class="category">
+		<section class="category" id="category">
 			<div class="container">
 				<div class="row">
 					<div class="border-line"></div>
@@ -54,11 +58,11 @@
 						<ul class="category-list">
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-1"></i>
-								<a class="category-list__link" href="">металлочерепица</a>
+								<a class="category-list__link" href="category.html#category">металлочерепица</a>
 							</li>
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-2"></i>
-								<a class="category-list__link" href="">профнастил</a>
+								<a class="category-list__link" href="prof.html#category">профнастил</a>
 							</li>
 							<li class="category-list__item">
 								<i class="category-list__icon icon icon-3"></i>
@@ -254,19 +258,46 @@
 						<div class="category-products">
 							<div class="category-product">
 								<div class="category-product__img">
-									<img data-src="img/item.png" data-title="title1" src="img/item.png" alt="item">
+									<img data-src="img/itembig.png" data-title="title1" src="img/item.png" alt="item">
 									<div class="category-product__img-scale">
 										<i class="icon icon-scale"></i>
 									</div>
 								</div>
 								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
+									<div class="category-product__body">
+										<p>технические характеристики</p>
+										<ul class="">
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Толщина полотна: 0,9 мм</li>
+											<li>- Длина модуля черепицы: 999 мм</li>
+											<li>- Высота ребра: 99 мм</li>
+										</ul>
+									</div>
+									<div class="category-product__header">
+										<span class="icon-down">диаманд плюс </span>
+									</div>
+								</div>
+							</div>
+
+							<div class="category-product">
+								<div class="category-product__img">
+									<img data-src="img/braun.png" data-title="title2" src="img/item.png" alt="item">
+									<div class="category-product__img-scale">
+										<i class="icon icon-scale"></i>
+									</div>
+								</div>
+								<div class="category-product__info">	
+									<div class="category-product__body">
+										<p>технические характеристики</p>
+										<ul class="">
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Толщина полотна: 0,9 мм</li>
+											<li>- Длина модуля черепицы: 999 мм</li>
+											<li>- Высота ребра: 99 мм</li>
+										</ul>
+									</div>
 									<div class="category-product__header">
 										<span class="icon-down">диаманд плюс </span>
 									</div>
@@ -281,34 +312,16 @@
 									</div>
 								</div>
 								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
-									<div class="category-product__header">
-										<span class="icon-down">диаманд плюс </span>
+									<div class="category-product__body">
+										<p>технические характеристики</p>
+										<ul class="">
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Общая ширина: 9999 мм</li>
+											<li>- Толщина полотна: 0,9 мм</li>
+											<li>- Длина модуля черепицы: 999 мм</li>
+											<li>- Высота ребра: 99 мм</li>
+										</ul>
 									</div>
-								</div>
-							</div>
-
-							<div class="category-product">
-								<div class="category-product__img">
-									<img data-src="img/braun.png" data-title="title2" src="img/item.png" alt="item">
-									<div class="category-product__img-scale">
-										<i class="icon icon-scale"></i>
-									</div>
-								</div>
-								<div class="category-product__info">
-									<ul class="category-product__body">
-										<li> Общая ширина: 9999 мм</li>
-										<li> Общая ширина: 9999 мм</li>
-										<li>Толщина полотна: 0,9 мм</li>
-										<li>Длина модуля черепицы: 999 мм</li>
-										<li>Высота ребра: 99 мм</li>
-									</ul>
 									<div class="category-product__header">
 										<span class="icon-down">диаманд плюс </span>
 									</div>
