--- a/src/products.html
+++ b/src/products.html
@@ -18,6 +18,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -42,8 +46,8 @@
 				<p>Металлочерепица является современным кровельным материалом, который сочетает в себе красивый внешний вид, относительную
 				простоту монтажа и небольшой общий вес получаемой конструкции. Крыша из металлочерепицы может иметь очень сложную форму благодаря большим возможностям, которые дает этот незаменимый при строительстве материал. В настоящий момент металлической кровлей обустраивается порядка 70% всех крыш, что позволяет назвать ее лидером среди всех кровельных материалов. </p>
 				<p>Преимущества металлочерепицы:</p>
-				<p>Усиленная защита от атмосферных воздействий
-					Устойчивость к влиянию внешней среды и различным повреждениям обеспечивает обработка стальных листов металлочерепицы сплавами алюминия и цинка, а также грунтовка и пассировка. В качестве финишного покрытия используются пластизол, призма и полиэстер. Собственное производство металлочерепицы позволяет максимально адаптировать защитные качества материала к российским климатическим условиям. Ваша кровля из металлочерепицы не будет выцветать и деформироваться в течение нескольких десятилетий.</p>
+				<p>Усиленная защита от атмосферных воздействий</p>
+					<p>Устойчивость к влиянию внешней среды и различным повреждениям обеспечивает обработка стальных листов металлочерепицы сплавами алюминия и цинка, а также грунтовка и пассировка. В качестве финишного покрытия используются пластизол, призма и полиэстер. Собственное производство металлочерепицы позволяет максимально адаптировать защитные качества материала к российским климатическим условиям. Ваша кровля из металлочерепицы не будет выцветать и деформироваться в течение нескольких десятилетий.</p>
 			</div>
 		</section><!--we-do-->
 
@@ -58,12 +62,12 @@
 						</div>
 						<a href="" data-slide="first" class="list__item list__item_border">металлочерепица</a>
 						<a href="" data-slide="first" class="list__item list__item_border">профнастил</a>
-						<a href="" data-slide="first" class="list__item list__item_border">декоративный профиль</a>
-						<a href="" data-slide="first" class="list__item list__item_border">комплектующие</a>
-						<a href="" data-slide="second" class="list__item list__item_border">металлочерепица1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">профнастил1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">декоративный профиль1</a>
-						<a href="" data-slide="second" class="list__item list__item_border">комплектующие1</a>
+						<a href="" data-slide="first" class="list__item list__item_border">водосточная система</a>
+						<a href="" data-slide="first" class="list__item list__item_border">фальцевая картина</a>
+						<a href="" data-slide="second" class="list__item list__item_border">кровельные комплектующие</a>
+						<a href="" data-slide="second" class="list__item list__item_border">софит металлический</a>
+						<a href="" data-slide="second" class="list__item list__item_border">штакетник</a>
+						<a href="" data-slide="second" class="list__item list__item_border">сопутствующие товары</a>
 					</nav>
 				</div>
 			
