--- a/src/about_us.html
+++ b/src/about_us.html
@@ -17,6 +17,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -34,6 +38,7 @@
 					</div>
 			</div>
 		</section><!--first-->
+
 		
 		<section class="we-do">
 			<div class="container">
