--- a/src/instructions.html
+++ b/src/instructions.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	//= template/head.html
 </head>
-<body>
+<body class="instructions">
 	//= template/aside.html
 	//= template/header.html
 
@@ -17,6 +17,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -46,28 +50,28 @@
 		<section class="gallery">
 			<div class="container">
 				<div class="gallery__wrapp">
-					<a  rel="group1" href="img/gallery/1.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/1.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
-					<a  rel="group1" href="img/gallery/2.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/2.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
-					<a  rel="group1" href="img/gallery/3.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/3.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
-					<a  rel="group1" href="img/gallery/4.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/4.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
-					<a  rel="group1" href="img/gallery/5.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/5.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
-					<a  rel="group1" href="img/gallery/6.jpg" class="gallery__item" title=" ">
-						<img src="img/gallery/6.jpg" alt="">
+					<a  rel="group1" href="img/instruct.png" class="gallery__item" title=" ">
+						<img src="img/instruct.png" alt="">
 						<span class="gallery__title">диаманд плюс <i class="icon-down"></i></span>
 					</a>
 				</div>				
