--- a/src/price.html
+++ b/src/price.html
@@ -17,6 +17,10 @@
 
 		<section class="first">
 
+			<div class="slides">
+				<div class="slide" style="background-image: url('img/top-bg.jpg')"></div>
+				<div class="slide" style="background-image: url('img/aboutbg1.png')"></div>
+			</div>
 			<div class="container first__inner">
 					<div class="first__txt">
 						<p>
@@ -44,7 +48,7 @@
 			</div>
 		</section><!--we-do-->
 
-		<section class="category">
+		<section class="category category_short">
 			<div class="container">
 				<div class="row">
 					<div class="border-line"></div>
